src/test/resources/type/good/append-2.ml
func test() {
    return [1,2,3]
}

z = test().append(4)