src/test/resources/type/bad/append-4.ml
x = [1,2,3]
x.append("hej")
x.append(3.3)
x.append(true)